plugins {
    id 'java'
}

sourceCompatibility = "17.PREVIEW"
targetCompatibility = "17.PREVIEW"

compileJava.options.encoding = 'UTF-8'

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += "--enable-preview"
}

tasks.withType(Test).configureEach {
    jvmArgs += "--enable-preview"
}

tasks.withType(JavaExec).configureEach {
    jvmArgs += "--enable-preview"
}

group 'com.zeydie'
version '1.1'

repositories {
    mavenCentral()

    flatDir {
        dirs 'libs'
    }
}

dependencies {
    implementation group: 'com.zeydie', name: 'SGson', version: '2.+'

    implementation group: 'com.google.code.gson', name: 'gson', version: '2.11.+'

    // https://mvnrepository.com/artifact/com.google.guava/guava
    implementation group: 'com.google.guava', name: 'guava', version: '32.1.+'

    // https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core
    implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.23.+'
    testRuntimeOnly group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.23.+'

    // https://mvnrepository.com/artifact/org.jetbrains/annotations
    implementation group: 'org.jetbrains', name: 'annotations', version: '24.1.+'

    // https://mvnrepository.com/artifact/org.projectlombok/lombok
    compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.+'
    testImplementation group: 'org.projectlombok', name: 'lombok', version: '1.18.+'
    annotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.+'

    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.2'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.2'
}

test {
    useJUnitPlatform()
    jvmArgs(['--enable-preview'])
}